# ai

./: -o  .agent-memory.toml  .envrc  .gitignore  .hermes  .semgrep.yml  .serena_config.yml  AGENTS.md  AGENTS.md.orig  CHOOSING_MODELS.yaml  CODEX.md  CURRENT_TOOL_LIST.md  FREE-MODELS.md  GAPS.md  NVIDIA_MODELS.md  OPENCODE_LOGGING_SOLUTIONS.md  PR_GUIDANCE.md  README.md  SDL.md  SLOP_REPORT.md  STATUS.md  add_math_category.py  add_mathoverflow.py  black.toml  check_ids.py  codex-mcp-config.json  create-swap.sh  current_general_code_writer.md  current_models_list.txt  debug.py  get_kilo_free.py  home-justfile  justfile  mcp-servers.yml  memory_opencode_formatters.md  models_to_find.txt  mypy.ini  nginx.conf  opencode-config-architecture.md  opencode-logging-research.md  (+18 more)
opencode/: .envrc  .gitignore  AGENTS.caveman.md  AGENTS.md  PERMISSION_SPEC.md  README.md  build_config.py  cc-safety-net.json  debug_opencode_models.py  ensemble.db-shm  ensemble.db-wal  extract_agents.py  justfile  kiro.db  kiro.db-shm  kiro.db-wal  kiro.json  manage_permissions.py  model-tester.py  opencode-fallback.json  opencode-serve.env  opencode.json  opencode_gc.sh  package-lock.json  plugins.json  pyproject.toml  rate-limit-fallback.json  refactor_subagents.py  rename_round2.py  test-tool-calling-capability.sh  test_all_providers_validation_fixed.py  test_model_tester.py  test_validation.py  update_mapping.py  update_mapping_3.py  update_openrouter.py
opencode/.qwen/: settings.json
opencode/.serena/: project.yml
opencode/agents/: (Lattice) Orchestrator.md  (Lattice) Researcher: Documentation.md  (Lattice) Reviewer: Checklist Completionist.md  (Lattice) Reviewer: Documentation Librarian.md  (Lattice) Reviewer: Test Coverage.md  (Lattice) Writer: Algorithm Porter.md  (Lattice) Writer: Interface Designer.md  (Lattice) Writer: Interface Implementer.md  (Lattice) Writer: TDD.md  (Lattice) Writer: Test Methods.md  Interactive.md  Minimal.md  Orchestrator (Custom).md  Plan (Custom).md  Ralph Planner.md  Repository Steward.md  Researcher: Code Base.md  Researcher: Documentation.md  Researcher: Repo Explorer.md  Reviewer: Code.md  Reviewer: Plan Contract.md  Reviewer: Plans.md  Reviewer: Semantic Audit.md  Reviewer: Test Compliance.md  Unrestricted Test.md  Writer: Atomic Task Executor.md  Writer: Documentation.md  Writer: General Code.md  Writer: Python.md  Writer: Refactorer.md  Writer: SageMath.md  Writer: Tests.md  Writer: TypeScript.md  Zotero Librarian.md  autonomous.md  autonomous.md.orig  build.md  compaction.md  correction-finder-ask.md  explore.md  (+26 more)
opencode/archive/: README.md
opencode/command/: hello.md  look-around.md  plannotator-annotate.md  plannotator-review.md  review-tests.md
opencode/commands/: brooks-sweep.md  caveman-commit.md  caveman-compress.md  caveman-help.md  caveman-review.md  caveman.md  fallback-status.md
opencode/config/: rate-limit-fallback.json
opencode/configs/: AGENTS.md  AGENTS.md.orig  cc-safety-net.json  cc-safety-net.json.backup  config_skeleton.json  local-plugins.json  model-fallback.json  rate-limit-fallback.json
opencode/docs/: GAPS.md  PERMISSION_SPEC.md  SESSION_HANDOFF_AND_BACKGROUND_RUNTIME.md  repo-organization.md
opencode/harness/: README.md  tsconfig.json
opencode/kiro-logs/: error_2026-03-25T22-39-05-896Z_request.json  error_2026-03-25T22-39-05-896Z_response.json  error_2026-03-25T22-39-58-260Z_request.json  error_2026-03-25T22-39-58-260Z_response.json  error_2026-03-26T15-22-31-168Z_request.json  error_2026-03-26T15-22-31-168Z_response.json  error_2026-03-28T18-35-04-891Z_request.json  error_2026-03-28T18-35-04-891Z_response.json  error_2026-03-28T18-35-29-278Z_request.json  error_2026-03-28T18-35-29-278Z_response.json  error_2026-03-28T18-47-16-116Z_request.json  error_2026-03-28T18-47-16-116Z_response.json  error_2026-03-28T22-59-47-928Z_request.json  error_2026-03-28T22-59-47-928Z_response.json
opencode/permissions/: AGENT_RULESET_MAP.md  PERMISSION_BUILDER_SPEC.md  PERMISSION_TAGS_SPEC.md  main.py  manage_permissions.py
opencode/plugin/: deny-overwrite.ts  git-checkpoint-plugin.ts  lint-plugin.ts  next-steps-hook.ts  py-linter.ts  transcript-timestamp.ts
opencode/plugins/: .envrc  AGENTS.md  AGENTS.md.orig  ASYNC_TUI_OBSERVABILITY_PLAN.md  Fourier_transform.md  GAPS.md  README.md  TODO_LANGFUSE.md  async-command.ts  canonical-shadowing-test.ts.bk  command-interceptor.ts  context-injector.ts  cot-trivial-test.ts  deny-overwrite.ts  git-add.ts  git-checkpoint-plugin.ts  git-checkpoint-plugin.ts.bk  task.ts  (+23 more)
scripts/: __init__.py  extract_unresolved_issues.py  jules-feedback.sh  openrouter_tool.py  pyproject.toml  run_agent.py  run_micro_agent.py  scaffold-sandbox.sh
(+1869 files in other folders)
