[project]
name = "usage-limits"
version = "1.0.0"
description = "Usage limit checkers for AI provider free tiers"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "rich>=13.0",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
usage-claude      = "usage_limits.providers.claude:main"
usage-codex       = "usage_limits.providers.codex:main"
usage-amp         = "usage_limits.providers.amp:main"
usage-openrouter  = "usage_limits.providers.openrouter:main"
usage-qwen        = "usage_limits.providers.qwen:main"
usage-ollama      = "usage_limits.providers.ollama:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usage_limits"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
